<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_dashboard_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/menu_search_icon"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/all_categories_icon"
            android:title="@string/nav_all_categories" />
        <item
            android:id="@+id/nav_add_missing_place"
            android:icon="@drawable/missing_place_icon"
            android:title="@string/add_missing_place" />
    </group>

    <item android:title="Profile">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/nav_login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/nav_logout" />
            </group>
        </menu>


    </item>

    <item android:title="Categories">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurants"
                    android:icon="@drawable/restaurant_icon"
                    android:title="@string/restaurants" />
                <item
                    android:id="@+id/nav_bank"
                    android:icon="@drawable/bank_icon"
                    android:title="@string/banks" />
                <item
                    android:id="@+id/nav_education"
                    android:icon="@drawable/school_icon"
                    android:title="@string/education" />
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/shop_icon"
                    android:title="@string/shops" />
            </group>
        </menu>

    </item>

    <item android:title="Share">

        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/share"
                    android:icon="@drawable/share_icon"
                    android:title="@string/nav_share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/rate_icon"
                    android:title="@string/nav_rate_us" />

            </group>
        </menu>

    </item>
</menu>