<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Common.LoginSingup.VerifyOTP">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:onClick="goToHomeFromOTP"
        android:padding="5dp"
        android:src="@drawable/general_close_icon"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/otp_ver_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/otp_ver_image" />


    <TextView
        android:id="@+id/otp_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_ver_image"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/muli_extralight"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/otp_description_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_description_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#65EAEAEA"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:lineColor="@color/colorAccent"
        app:lineWidth="1dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_view"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/resend"
        android:fontFamily="@font/muli_extralight"
        android:includeFontPadding="false"
        android:text="@string/otp_resend_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_view"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:fontFamily="@font/muli_extralight"
        android:text="Resend"
        android:textColor="#f56258"
        android:textSize="16sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:onClick="callNextScreenFromOTP"
        android:text="@string/verify_code"
        android:textColor="@color/black"
        android:transitionName="transition_OTP_screen" />


</RelativeLayout>

